--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Serene Retreat | Your Perfect Homestay</title>
+    <title>Mararinest | Your Perfect Homestay</title>
     <!-- Favicon -->
     <link rel="icon" href="https://placehold.co/32x32/d946ef/ffffff?text=SR">
     <!-- Google Fonts: Inter -->
@@ -284,3 +284,4 @@
     </script>
 </body>
 </html>
+
