--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mararinest | Your Perfect Homestay</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://placehold.co/32x32/d946ef/ffffff?text=SR">
+    <link rel="icon" href="https://placehold.co/32x32/d946ef/ffffff?text=MN">
     <!-- Google Fonts: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Tailwind CSS CDN -->
@@ -44,7 +44,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-violet-500" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 2L3 9v11a2 2 0 002 2h14a2 2 0 002-2V9l-9-7zm0 18a8 8 0 100-16 8 8 0 000 16z"/>
                 </svg>
-                <span>The Serene Retreat</span>
+                <span>Mararinest</span>
             </a>
             <div class="hidden md:flex space-x-6">
                 <a href="#home" class="text-gray-600 hover:text-violet-600 font-medium transition-colors">Home</a>
@@ -88,7 +88,7 @@
                     <div class="space-y-6">
                         <h2 class="text-3xl sm:text-4xl font-bold text-center md:text-left text-violet-600">About Our Homestay</h2>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                            Welcome to The Serene Retreat, where tranquility meets comfort. Our family-run homestay is dedicated to providing a personalized and unforgettable experience. We believe in creating a space that feels like a home away from home, with warm hospitality, delicious home-cooked meals, and a peaceful environment.
+                            Welcome to Mararinest, where tranquility meets comfort. Our family-run homestay is dedicated to providing a personalized and unforgettable experience. We believe in creating a space that feels like a home away from home, with warm hospitality, delicious home-cooked meals, and a peaceful environment.
                         </p>
                         <p class="text-lg text-gray-600 leading-relaxed">
                             Nestled amidst lush greenery and rolling hills, our property offers a perfect escape from the city bustle. Whether you're a solo traveler, a couple on a romantic getaway, or a family seeking adventure, we have something special for everyone.
@@ -284,4 +284,5 @@
     </script>
 </body>
 </html>
+
 
