--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-violet-500" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 2L3 9v11a2 2 0 002 2h14a2 2 0 002-2V9l-9-7zm0 18a8 8 0 100-16 8 8 0 000 16z"/>
                 </svg>
-                <span>Mararinest</span>
+                <span>Mararinest Beach Homestay</span>
             </a>
             <div class="hidden md:flex space-x-6">
                 <a href="#home" class="text-gray-600 hover:text-violet-600 font-medium transition-colors">Home</a>
@@ -88,7 +88,7 @@
                     <div class="space-y-6">
                         <h2 class="text-3xl sm:text-4xl font-bold text-center md:text-left text-violet-600">About Our Homestay</h2>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                            Welcome to Mararinest, where tranquility meets comfort. Our family-run homestay is dedicated to providing a personalized and unforgettable experience. We believe in creating a space that feels like a home away from home, with warm hospitality, delicious home-cooked meals, and a peaceful environment.
+                            Welcome to Mararinest Beach Homestay, where tranquility meets comfort. Our family-run homestay is dedicated to providing a personalized and unforgettable experience. We believe in creating a space that feels like a home away from home, with warm hospitality, delicious home-cooked meals, and a peaceful environment.
                         </p>
                         <p class="text-lg text-gray-600 leading-relaxed">
                             Nestled amidst lush greenery and rolling hills, our property offers a perfect escape from the city bustle. Whether you're a solo traveler, a couple on a romantic getaway, or a family seeking adventure, we have something special for everyone.
@@ -284,5 +284,6 @@
     </script>
 </body>
 </html>
+
 
 
