--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="pt-20">
         <!-- Hero Section -->
-        <section id="home" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://placehold.co/1920x1080/4f46e5/ffffff?text=A+Beautiful+Mountain+Homestay');">
+        <section id="home" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/91/54/79/mararinest.jpg?w=1100&h=600&s=1');">
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 p-6 md:p-10 lg:p-16">
                 <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight mb-4 animate-fade-in-up">Discover Your Sanctuary</h1>
@@ -284,6 +284,7 @@
     </script>
 </body>
 </html>
+
 
 
 
