--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <section id="home" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/91/54/79/mararinest.jpg?w=1100&h=600&s=1');">
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 p-6 md:p-10 lg:p-16">
-                <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight mb-4 animate-fade-in-up">Discover Your Sanctuary</h1>
-                <p class="text-lg sm:text-xl lg:text-2xl mb-8 max-w-2xl mx-auto animate-fade-in-up">Experience the peace and beauty of our cozy homestay, nestled in the heart of nature.</p>
+                <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight mb-4 animate-fade-in-up">Your Perfect Homestay</h1>
+                <p class="text-lg sm:text-xl lg:text-2xl mb-8 max-w-2xl mx-auto animate-fade-in-up">Where Waves Whisper Peace.</p>
                 <a href="#contact" class="bg-violet-600 hover:bg-violet-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform transition-transform duration-300 hover:scale-105 animate-fade-in-up">Book Your Stay</a>
             </div>
         </section>
@@ -284,6 +284,7 @@
     </script>
 </body>
 </html>
+
 
 
 
