--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section id="home" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/91/54/79/mararinest.jpg?w=1100&h=600&s=1');">
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 p-6 md:p-10 lg:p-16">
-                <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight mb-4 animate-fade-in-up">Your Perfect Homestay</h1>
+                <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight mb-4 animate-fade-in-up">Your Sanctuary by the Sea</h1>
                 <p class="text-lg sm:text-xl lg:text-2xl mb-8 max-w-2xl mx-auto animate-fade-in-up">Where Waves Whisper Peace.</p>
                 <a href="#contact" class="bg-violet-600 hover:bg-violet-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transform transition-transform duration-300 hover:scale-105 animate-fade-in-up">Book Your Stay</a>
             </div>
@@ -88,7 +88,11 @@
                     <div class="space-y-6">
                         <h2 class="text-3xl sm:text-4xl font-bold text-center md:text-left text-violet-600">About Our Homestay</h2>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                            Welcome to Mararinest Beach Homestay, where tranquility meets comfort. Our family-run homestay is dedicated to providing a personalized and unforgettable experience. We believe in creating a space that feels like a home away from home, with warm hospitality, delicious home-cooked meals, and a peaceful environment.
+                            Welcome to Mararinest Beach Homestay, a family-run retreat just steps away from the golden sands of Marari Beach. Here, every guest is treated like a part of our family, with genuine care and warm hospitality that make your stay truly special.
+
+Wake up to the rhythm of the waves, enjoy the comfort of our cozy rooms, and savor home-cooked Kerala delicacies prepared with love. Surrounded by coconut palms and the refreshing sea breeze, Mararinest offers a perfect escape for couples, families, and solo travelers alike.
+
+More than just a place to stay, Mararinest is your home by the sea—where comfort, culture, and coastal charm come together.
                         </p>
                         <p class="text-lg text-gray-600 leading-relaxed">
                             Nestled amidst lush greenery and rolling hills, our property offers a perfect escape from the city bustle. Whether you're a solo traveler, a couple on a romantic getaway, or a family seeking adventure, we have something special for everyone.
@@ -284,6 +288,7 @@
     </script>
 </body>
 </html>
+
 
 
 
