--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
                         <h2 class="text-3xl sm:text-4xl font-bold text-center md:text-left text-violet-600">About Our Homestay</h2>
                         <p class="text-lg text-gray-600 leading-relaxed">
                             Welcome to Mararinest Beach Homestay, a family-run retreat just steps away from the golden sands of Marari Beach. Here, every guest is treated like a part of our family, with genuine care and warm hospitality that make your stay truly special.
-
-Wake up to the rhythm of the waves, enjoy the comfort of our cozy rooms, and savor home-cooked Kerala delicacies prepared with love. Surrounded by coconut palms and the refreshing sea breeze, Mararinest offers a perfect escape for couples, families, and solo travelers alike.
-
-More than just a place to stay, Mararinest is your home by the sea—where comfort, culture, and coastal charm come together.
                         </p>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                            Nestled amidst lush greenery and rolling hills, our property offers a perfect escape from the city bustle. Whether you're a solo traveler, a couple on a romantic getaway, or a family seeking adventure, we have something special for everyone.
+                         Wake up to the rhythm of the waves, enjoy the comfort of our cozy rooms, and savor home-cooked Kerala delicacies prepared with love. Surrounded by coconut palms and the refreshing sea breeze, Mararinest offers a perfect escape for couples, families, and solo travelers alike.   
+                        </p>
+                         <p class="text-lg text-gray-600 leading-relaxed">
+                        More than just a place to stay, Mararinest is your home by the sea—where comfort, culture, and coastal charm come together.
                         </p>
                     </div>
                     <div>
@@ -288,6 +287,7 @@ More than just a place to stay, Mararinest is your home by the sea—where comfo
     </script>
 </body>
 </html>
+
 
 
 
