--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="pt-20">
         <!-- Hero Section -->
-        <section id="home" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/91/54/79/mararinest.jpg?w=1100&h=600&s=1');">
+        <section id="home" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center text-white" style="background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/12/49/cb/f2/marari-nest-beach-homestay.jpg?w=2000&h=-1&s=1');">
             <div class="absolute inset-0 bg-black opacity-50"></div>
             <div class="relative z-10 p-6 md:p-10 lg:p-16">
                 <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold tracking-tight mb-4 animate-fade-in-up">Your Sanctuary by the Sea</h1>
@@ -98,7 +98,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="https://placehold.co/800x600/6b46c1/ffffff?text=Cozy+Living+Area" alt="Cozy living area" class="w-full h-auto rounded-lg shadow-xl object-cover">
+                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/91/54/79/mararinest.jpg?w=1100&h=600&s=1" alt="Cozy living area" class="w-full h-auto rounded-lg shadow-xl object-cover">
                     </div>
                 </div>
             </div>
@@ -287,6 +287,7 @@
     </script>
 </body>
 </html>
+
 
 
 
