--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor"><path d="M22.46 6.17c-.6.26-1.23.44-1.89.52.69-.41 1.22-1.05 1.47-1.81-.65.38-1.36.65-2.12.8-.62-.66-1.5-1.07-2.49-1.07-1.81 0-3.28 1.47-3.28 3.28 0 .26.03.5.09.73-2.73-.14-5.15-1.44-6.77-3.43-.28.48-.44 1.04-.44 1.63 0 1.14.58 2.14 1.47 2.73-.54-.02-1.05-.17-1.5-.41v.04c0 1.59 1.13 2.92 2.63 3.22-.27.07-.56.11-.86.11-.21 0-.42-.02-.62-.06.42 1.3 1.63 2.25 3.07 2.28-1.12.88-2.54 1.41-4.08 1.41-.26 0-.52-.02-.77-.04 1.45.93 3.17 1.47 5.03 1.47 6.04 0 9.35-5 9.35-9.35 0-.14-.01-.28-.01-.42.64-.47 1.19-1.06 1.63-1.74z"/></svg>
                 </a>
             </div>
-            <p class="text-gray-400">&copy; 2024 The Serene Retreat. All rights reserved.</p>
+            <p class="text-gray-400">&copy; 2025 Marari Beach Homestay. All rights reserved.</p>
         </div>
     </footer>
 
@@ -287,6 +287,7 @@
     </script>
 </body>
 </html>
+
 
 
 
