--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
                             <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-violet-500 focus:ring-violet-500">
                         </div>
                         <div>
+                            <label for="Contact Number" class="block text-sm font-medium text-gray-700">Contact Number</label>
+                            <input type="contactnumber" id="contactnumber" name="contactnumber" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-violet-500 focus:ring-violet-500">
+                        </div>
+                        <div>
                             <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
                             <textarea id="message" name="message" rows="4" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-violet-500 focus:ring-violet-500"></textarea>
                         </div>
@@ -287,6 +291,7 @@
     </script>
 </body>
 </html>
+
 
 
 
