--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                     <div class="space-y-6">
                         <h2 class="text-3xl sm:text-4xl font-bold text-center md:text-left text-violet-600">About Our Homestay</h2>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                            Welcome to Mararinest Beach Homestay, a family-run retreat just steps away from the golden sands of Marari Beach. Here, every guest is treated like a part of our family, with genuine care and warm hospitality that make your stay truly special.
+                          Hello, I’m Jeejo, and I’ve had the pleasure of working in the hospitality service industry for the past 15 years. My journey in hospitality has been all about creating meaningful and memorable experiences for guests, and that passion led me to open my own homestay 12 years ago.  
                         </p>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                         Wake up to the rhythm of the waves, enjoy the comfort of our cozy rooms, and savor home-cooked Kerala delicacies prepared with love. Surrounded by coconut palms and the refreshing sea breeze, Mararinest offers a perfect escape for couples, families, and solo travelers alike.   
+                        Our homestay, with just 8 cozy rooms, offers a truly intimate and personalized experience. Over the years, we’ve built a reputation for providing warm, welcoming service in a peaceful, beachside location. My team and I work hard to ensure that each guest feels at home and enjoys a relaxing, comfortable stay.
                         </p>
                          <p class="text-lg text-gray-600 leading-relaxed">
-                        More than just a place to stay, Mararinest is your home by the sea—where comfort, culture, and coastal charm come together.
+                        Whether you’re here for a short visit or a longer retreat, we are committed to making your time with us special and unforgettable. I look forward to welcoming you to our homestay and ensuring you have a stay that feels like a true getaway!
                         </p>
                     </div>
                     <div>
@@ -291,6 +291,7 @@
     </script>
 </body>
 </html>
+
 
 
 
