--- a/index.html
+++ b/index.html
@@ -88,13 +88,10 @@
                     <div class="space-y-6">
                         <h2 class="text-3xl sm:text-4xl font-bold text-center md:text-left text-violet-600">About Our Homestay</h2>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                          Hello, I’m Jeejo, and I’ve had the pleasure of working in the hospitality service industry for the past 15 years. My journey in hospitality has been all about creating meaningful and memorable experiences for guests, and that passion led me to open my own homestay 12 years ago.  
+                         Just a step away from the golden sand and crystal-clear waters of Marari Beach, nestled amidst lush greenery, our homestay offers a peaceful retreat with eight thoughtfully designed rooms. Whether you’re here for a romantic getaway, a family vacation, or a solo retreat, our intimate homestay provides a welcoming atmosphere and an opportunity to truly unwind.
                         </p>
                         <p class="text-lg text-gray-600 leading-relaxed">
-                        Our homestay, with just 8 cozy rooms, offers a truly intimate and personalized experience. Over the years, we’ve built a reputation for providing warm, welcoming service in a peaceful, beachside location. My team and I work hard to ensure that each guest feels at home and enjoys a relaxing, comfortable stay.
-                        </p>
-                         <p class="text-lg text-gray-600 leading-relaxed">
-                        Whether you’re here for a short visit or a longer retreat, we are committed to making your time with us special and unforgettable. I look forward to welcoming you to our homestay and ensuring you have a stay that feels like a true getaway!
+                          With modern amenities, personalized service, and a location that is as beautiful as it is tranquil, our beach homestay is the perfect destination for anyone looking to enjoy the best of beachside living. Let us make your stay unforgettable.
                         </p>
                     </div>
                     <div>
@@ -291,6 +288,7 @@
     </script>
 </body>
 </html>
+
 
 
 
