--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Testimonial 1 -->
                     <div class="bg-white rounded-lg p-8 shadow-lg">
-                        <p class="text-gray-600 italic mb-4">"A true hidden gem! The hospitality was incredible and the views were breathtaking. We can't wait to come back!"</p>
-                        <p class="font-semibold text-gray-800">- Jane Doe</p>
-                        <p class="text-sm text-gray-500">Family from New York</p>
+                        <p class="text-gray-600 italic mb-4">"Dream come true! Small private hotel, but the upkeep and service are better than many expensive hotels. Strong AC, Wi-Fi, and hot water. Exceptionally clean. Close to a clean beach. Excellent food served in a lush garden setting. This guy should give hotel management lessons."</p>
+                        <p class="font-semibold text-gray-800">- Roger W</p>
+                        <p class="text-sm text-gray-500">Family from France</p>
                     </div>
                     <!-- Testimonial 2 -->
                     <div class="bg-white rounded-lg p-8 shadow-lg">
@@ -312,6 +312,7 @@
     </script>
 </body>
 </html>
+
 
 
 
