--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@
                     </div>
                     <!-- Testimonial 2 -->
                     <div class="bg-white rounded-lg p-8 shadow-lg">
-                        <p class="text-gray-600 italic mb-4">"The perfect escape from city life. So peaceful and relaxing. The food was simply amazing, all home-cooked with love."</p>
-                        <p class="font-semibold text-gray-800">- John Smith</p>
-                        <p class="text-sm text-gray-500">Solo Traveler</p>
+                        <p class="text-gray-600 italic mb-4">"We thoroughly enjoyed our stay at Mararinest. The homestay is a beautiful setting with a pretty garden and a short stroll from a quiet beach. The rooms are modern, clean, and spacious.
+The highlight of our trip was the attentive hosts, who made the trip special. We recommend eating at the guesthouse. The food was freshly made traditional Kerala food, which was delicious. Thankyou Mararinest!"</p>
+                        <p class="font-semibold text-gray-800">- Leanne</p>
+                        <p class="text-sm text-gray-500">United Kingdom</p>
                     </div>
                     <!-- Testimonial 3 -->
                     <div class="bg-white rounded-lg p-8 shadow-lg">
@@ -312,6 +313,7 @@
     </script>
 </body>
 </html>
+
 
 
 
