--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
                     </div>
                     <!-- Testimonial 3 -->
                     <div class="bg-white rounded-lg p-8 shadow-lg">
-                        <p class="text-gray-600 italic mb-4">"We booked a last-minute trip and were so lucky to find this place. The hosts were wonderful and made our stay so comfortable."</p>
-                        <p class="font-semibold text-gray-800">- Emily and Mark</p>
-                        <p class="text-sm text-gray-500">Couple from London</p>
+                        <p class="text-gray-600 italic mb-4">"The best place near the beach! Great, very clean accommodation in the nice garden. Very kind and helpful staff. Very good laundry service. Its place near a beautiful beach. We order the dinner - It was great experience. Everything was perfect."</p>
+                        <p class="font-semibold text-gray-800">- Robert G</p>
+                        <p class="text-sm text-gray-500">Szczecin,Poland</p>
                     </div>
                 </div>
             </div>
@@ -313,6 +313,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
