--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Room Card 1 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105">
-                        <img src="https://placehold.co/600x400/805ad5/ffffff?text=Deluxe+Room" alt="Deluxe Room" class="w-full h-48 object-cover">
+                        <img src="https://lh3.googleusercontent.com/p/AF1QipPvBCArgyGhGykcYtbcu33ckUgdwj2xJuMvx0Ng=s1360-w1360-h1020-rw" alt="Deluxe Room" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-gray-800 mb-2">Deluxe Room</h3>
                             <p class="text-gray-600 text-sm mb-4">A spacious room with a king-size bed, private balcony, and stunning views of the valley.</p>
@@ -313,6 +313,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
