--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <!-- Room Card 2 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105">
-                        <img src="https://placehold.co/600x400/9f7aea/ffffff?text=Standard+Room" alt="Standard Room" class="w-full h-48 object-cover">
+                        <img src="https://lh3.googleusercontent.com/p/AF1QipPhEh2J_u5tP7vaQqDg6f61WYi8kbq-SUK8pQ9X=s1360-w1360-h1020-rw" alt="Standard Room" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-gray-800 mb-2">Standard Room</h3>
                             <p class="text-gray-600 text-sm mb-4">Our comfortable standard room, perfect for solo travelers or couples.</p>
@@ -127,7 +127,7 @@
                     </div>
                     <!-- Room Card 3 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden transform transition-transform duration-300 hover:scale-105">
-                        <img src="https://placehold.co/600x400/b794f4/ffffff?text=Family+Suite" alt="Family Suite" class="w-full h-48 object-cover">
+                        <img src="https://lh3.googleusercontent.com/p/AF1QipPEzQSCoFRhB_oE37Lxema7o6FtI4WQdtARVc7y=s1360-w1360-h1020-rw" alt="Family Suite" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-gray-800 mb-2">Family Suite</h3>
                             <p class="text-gray-600 text-sm mb-4">A large suite with two separate rooms, ideal for families or groups.</p>
@@ -313,6 +313,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
