--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
                         </p>
                     </div>
                     <div>
-                        <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1a/91/54/79/mararinest.jpg?w=1100&h=600&s=1" alt="Cozy living area" class="w-full h-auto rounded-lg shadow-xl object-cover">
+                        <img src="https://gos3.ibcdn.com/6e84b112-6c9e-4616-a603-2087de385848.jpeg" alt="Cozy living area" class="w-full h-auto rounded-lg shadow-xl object-cover">
                     </div>
                 </div>
             </div>
@@ -313,6 +313,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
