--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <a href="#rooms" class="text-gray-600 hover:text-violet-600 font-medium transition-colors">Rooms</a>
                 <a href="#gallery" class="text-gray-600 hover:text-violet-600 font-medium transition-colors">Gallery</a>
                 <a href="#contact" class="text-gray-600 hover:text-violet-600 font-medium transition-colors">Contact</a>
+                <a href="#contact" class="text-gray-600 hover:text-violet-600 font-medium transition-colors">Whatsapp us: +919142106400</a>
             </div>
             <!-- Mobile Menu Button -->
             <button id="mobile-menu-btn" class="md:hidden text-gray-600 focus:outline-none">
@@ -313,6 +314,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
