--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a href="#rooms" class="block py-3 px-6 text-gray-700 hover:bg-gray-100 transition-colors">Rooms</a>
             <a href="#gallery" class="block py-3 px-6 text-gray-700 hover:bg-gray-100 transition-colors">Gallery</a>
             <a href="#contact" class="block py-3 px-6 text-gray-700 hover:bg-gray-100 transition-colors">Contact</a>
+            <a href="#contact" class="block py-3 px-6 text-gray-700 hover:bg-gray-100 transition-colors">Whatsapp us: +919142106400 </a>
         </div>
     </header>
 
@@ -314,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
