--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl sm:text-4xl font-bold text-center text-violet-600 mb-12">Gallery</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-                    <img src="https://www.instagram.com/p/DCKA-xiy7m_/?igsh=MWYyZjU3eTVyMW53OA==" alt="Gallery Image 1" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+1" alt="Gallery Image 1" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+2" alt="Gallery Image 2" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/e5e7eb/ffffff?text=Image+3" alt="Gallery Image 3" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/f3f4f6/ffffff?text=Image+4" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
