--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+1" alt="Gallery Image 1" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+2" alt="Gallery Image 2" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/e5e7eb/ffffff?text=Image+3" alt="Gallery Image 3" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://placehold.co/600x400/f3f4f6/ffffff?text=Image+4" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://www.airbnb.co.in/rooms/15137607?source_impression_id=p3_1756634920_P3GXbs3L9noOuuI_&modal=PHOTO_TOUR_SCROLLABLE&modalItem=238495865" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fecaca/ffffff?text=Image+5" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fde047/ffffff?text=Image+6" alt="Gallery Image 6" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/a7f3d0/ffffff?text=Image+7" alt="Gallery Image 7" class="w-full h-auto rounded-lg shadow-md object-cover">
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
