--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <img src="https://placehold.co/600x400/fecaca/ffffff?text=Image+5" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fde047/ffffff?text=Image+6" alt="Gallery Image 6" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/a7f3d0/ffffff?text=Image+7" alt="Gallery Image 7" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://placehold.co/600x400/d1d5db/ffffff?text=Image+8" alt="Gallery Image 8" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://a0.muscache.com/im/pictures/72ce3299-fd01-4105-8b97-05fc2e7c401f.jpg?im_w=1440" alt="Gallery Image 8" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
             </div>
         </section>
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
