--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h2 class="text-3xl sm:text-4xl font-bold text-center text-violet-600 mb-12">Gallery</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                     <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+1" alt="Gallery Image 1" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+2" alt="Gallery Image 2" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://surl.li/ibtgwx" alt="Gallery Image 2" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/e5e7eb/ffffff?text=Image+3" alt="Gallery Image 3" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://a0.muscache.com/im/pictures/6e9cc868-104a-47e9-80c2-9c278dacab17.jpg?im_w=1440" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fecaca/ffffff?text=Image+5" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
