--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
                     <img src="https://placehold.co/600x400/d4d4d8/ffffff?text=Image+1" alt="Gallery Image 1" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://surl.li/ibtgwx" alt="Gallery Image 2" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://placehold.co/600x400/e5e7eb/ffffff?text=Image+3" alt="Gallery Image 3" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4nrsxk35BRmlVqGSM9yU07ydFPnvIgSCej3IESHTRfqa3McQZsu0ZyJNZuNVKuFZyFPwio0ZRZLbbg6toMx9ZsComX44sOa07vpopSJJq5onkEjmwNJiv4gAOk9UAOW6dgwweZYSLg=s1360-w1360-h1020-rw" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4nrsxk35BRmlVqGSM9yU07ydFPnvIgSCej3IESHTRfqa3McQZsu0ZyJNZuNVKuFZyFPwio0ZRZLbbg6toMx9ZsComX44sOa07vpopSJJq5onkEjmwNJiv4gAOk9UAOW6dgwweZYSLg=s1360-w1360-h1020-rw" alt="Gallery Image 3" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://a0.muscache.com/im/pictures/6e9cc868-104a-47e9-80c2-9c278dacab17.jpg?im_w=1200" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fecaca/ffffff?text=Image+5" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fde047/ffffff?text=Image+6" alt="Gallery Image 6" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/a7f3d0/ffffff?text=Image+7" alt="Gallery Image 7" class="w-full h-auto rounded-lg shadow-md object-cover">
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
