--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <img src="https://a0.muscache.com/im/pictures/6e9cc868-104a-47e9-80c2-9c278dacab17.jpg?im_w=1200" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fecaca/ffffff?text=Image+5" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fde047/ffffff?text=Image+6" alt="Gallery Image 6" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4nqnB_ESzeAaN5MPbbMkpwtD_J_DW0d84ed9UQOpFu0G4_4KHf7IkKom52gvKoXbNeO3nDJhDlRP9ywReTLoBMdm2tRQhAaZoal1EMbZ1Cq6F4giA2d4hzonfAgiIRd9ZSjWTlUKXA=s1360-w1360-h1020-rw" alt="Gallery Image 7" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/06/fe/dd/13/marari-beach.jpg?w=2000&h=-1&s=1" alt="Gallery Image 7" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://a0.muscache.com/im/pictures/72ce3299-fd01-4105-8b97-05fc2e7c401f.jpg?im_w=1440" alt="Gallery Image 8" class="w-full h-auto rounded-lg shadow-md object-cover">
                 </div>
             </div>
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
