--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <img src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4npQP7lt7P1iMHG9EbkIQkoDttTXM6BV4LatwM_Xz92yFaa0eGTzRuxVT-3tyKHQPbKxpIabAJkyDUve2zbN8PZI_DCCO4xv4eMyqORnY6Xh3hFgpQIxQ2J03Fh_2mEADTf4UYQ=s1360-w1360-h1020-rw" alt="Gallery Image 2" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://a0.muscache.com/im/pictures/6a40ad17-1387-4a5f-9f74-832d6a61708b.jpg?im_w=1440" alt="Gallery Image 3" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://a0.muscache.com/im/pictures/6e9cc868-104a-47e9-80c2-9c278dacab17.jpg?im_w=1200" alt="Gallery Image 4" class="w-full h-auto rounded-lg shadow-md object-cover">
-                    <img src="https://placehold.co/600x400/fecaca/ffffff?text=Image+5" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
+                    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2e/2c/c0/60/caption.jpg?w=1400&h=-1&s=1" alt="Gallery Image 5" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://placehold.co/600x400/fde047/ffffff?text=Image+6" alt="Gallery Image 6" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/12/49/cb/f2/marari-nest-beach-homestay.jpg?w=2000&h=-1&s=1" alt="Gallery Image 7" class="w-full h-auto rounded-lg shadow-md object-cover">
                     <img src="https://a0.muscache.com/im/pictures/72ce3299-fd01-4105-8b97-05fc2e7c401f.jpg?im_w=1440" alt="Gallery Image 8" class="w-full h-auto rounded-lg shadow-md object-cover">
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
