--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <img src="https://lh3.googleusercontent.com/p/AF1QipPEzQSCoFRhB_oE37Lxema7o6FtI4WQdtARVc7y=s1360-w1360-h1020-rw" alt="Family Suite" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-gray-800 mb-2">Family Suite</h3>
-                            <p class="text-gray-600 text-sm mb-4">A large suite with two separate rooms, ideal for families or groups.</p>
+                            <p class="text-gray-600 text-sm mb-4">A large suite, ideal for families or groups.</p>
                             <a href="#contact" class="inline-block bg-violet-600 hover:bg-violet-700 text-white text-sm font-semibold py-2 px-4 rounded-full transition-colors">Book Now</a>
                         </div>
                     </div>
@@ -315,6 +315,7 @@ The highlight of our trip was the attentive hosts, who made the trip special. We
     </script>
 </body>
 </html>
+
 
 
 
